# python-playground

./: .editorconfig  .gitattributes  .gitignore  .yamllint.yaml  404.html  LICENSE.txt  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/actions/poetry/: action.yaml
.github/actions/python/: action.yaml
.github/actions/virtualenv/: action.yaml
.github/workflows/: ci.yaml  docs-deploy.yaml  docs-setup.yaml  ftp-deploy.yaml  ftp-setup.yaml  semantic-pull-request.yaml  stale.yaml
docs/: temp.md
scripts/: __init__.py
scripts/dart_sass/: __init__.py  __main__.py  compile.py
scripts/fix_yaml/: __init__.py  __main__.py  fix_yaml.py
search/: search_index.json
src/: __init__.py  test.css  test.scss
src/browser_stack/: __init__.py  __main__.py  web_driver.py
src/browser_stack/static/files/: manifest.json
src/browser_stack/static/scripts/: index.js
src/browser_stack/static/styles/: index.css
src/browser_stack/styles/: index.scss
src/browser_stack/templates/: index.jinja
src/browser_stack/templates/components/: logo.jinja  select_breakpoint.jinja  select_browser.jinja  select_device.jinja
src/browser_stack/templates/forms/: browser_stack.jinja
src/browser_stack/templates/macros/: forms.jinja  utilities.jinja
src/html_tracing/: __init__.py  __main__.py  server.py  utils.py
src/html_tracing/static/files/: manifest.json
src/html_tracing/statics/scripts/: index.js
src/html_tracing/statics/styles/: index.css
src/html_tracing/templates/: index.html
src/html_tracing/templates/pages/: base.jinja  home.jinja  spider.jinja
src/html_tracing/utilities/: agents.py  clone.py  logger.py  proxies.py  session.py  user_agents.py
src/temp/: __init__.py  temp.py
src/utilities/: __init__.py  logger.py
src/web_crawler/: __init__.py  benchmark.py
src/web_crawler/crawler_playwright/: __init__.py  benchmark.py
src/web_crawler/crawler_selenium/: __init__.py  benchmark.py
src/web_scraping/: __init__.py  agents.py  clone.py  judge.py  proxies.py  session.py
src/web_spider/: __init__.py  utilities.py  web_spider.js
tests/temp/: __init__.py  test_temp.py
tests/utilities/: __init__.py  test_logger.py
tools/: __init__.py  logger.py
utilities/: index.html
